--- a/css/style.css
+++ b/css/style.css
@@ -6,3 +6,15 @@
     box-sizing: border-box;
     font-family: 'Oxanium', cursive;
 }
+
+body {
+    text-align: center;
+    background: linear-gradient(to bottom, #6ab7f5, #fff);
+    min-height: 100vh;
+}
+
+main {
+    background-color: red;
+    display: inline-block;
+    margin-top: 2%;
+}
